# sasctf-quals-2024

./: .gitignore  README.md
tasks/forensics-autoit/: README.md
tasks/forensics-autoit/static/: README.md
tasks/forensics-autoit/writeup/: solve.py
tasks/forensics-foreground/: README.md
tasks/forensics-foreground/static/: README.md
tasks/forensics-icecream/: README.md
tasks/forensics-icecream/static/: README.md
tasks/forensics-icecream/writeup/: decrypt_file.php
tasks/minecraft-minotaur/: README.md
tasks/minecraft-minotaur/server/: README.md  docker-compose.yml
tasks/minecraft-minotaur/sources/: make_archive.sh
tasks/minecraft-parkour/: README.md
tasks/minecraft-parkour/sources/: parkour.cbscript  random.cblib
tasks/minecraft-signed/: README.md
tasks/minecraft-signed/sources/: make_archive.sh  makemap.py
tasks/misc-esperanto/: README.md
tasks/misc-last-lang/: README.md
tasks/misc-last-lang/sources/last-lang/: Cargo.toml  Dioxus.toml
tasks/misc-last-lang/sources/last-lang/assets/: main.css
tasks/misc-last-lang/sources/last-lang/src/: main.rs
tasks/misc-petushok/: README.md
tasks/ppc-drovosec/: README.md  nginx.conf
tasks/ppc-turing-lol/: README.md
tasks/pwn-ubercaged/: .gitignore  README.md
tasks/reverse-cloud-storage/: README.md
tasks/reverse-ebin/: README.md
tasks/reverse-meringue/: README.md
tasks/reverse-nuclear-panel/: README.md
tasks/reverse-windriver/: README.md
tasks/stego-vobla/: README.md
tasks/web-binary-options/: README.md
tasks/web-download-moment/: .gitignore  README.md
tasks/web-qr-xss/: README.md
(+227 files in other folders)
